fix horizontal scroll

--- a/app/assets/stylesheets/public/contests/_brand.sass
+++ b/app/assets/stylesheets/public/contests/_brand.sass
@@ -9,10 +9,10 @@
 
     .may_links
       position: absolute
-      width: 400px
+      width: 300px
       height: 120px
       top: 29px
-      right: -80px
+      right: 20px
 
       li
         margin: 0 0 6px 0
@@ -32,10 +32,6 @@
       width: 1200px
       height: 124px
       left: 0px
-
-  .may_content_wrapper
-    width: 1200px
-    margin: 0 auto
 
   .content_wrapper
     background-color: #f5f5f5
